--- a/index.html
+++ b/index.html
@@ -4,16 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Technical Test</title>
     <link rel="stylesheet" href="assets/web.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Roboto&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ff8083b5e7.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li>We</li>
-            <li>are</li>
-            <li>the nav</li>
+    <nav class="navbar">   
+    <!-- LOGO -->
+    <div class="logo" ><i class="fas fa-tv"></i> Toolbox Text</div>
+    
+        <ul class="nav-links">
+            <div class="menu">
+                <li><a href="#">FIRST EXERCISE</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Contact</a></li>
+              </div>
         </ul>
     </nav>
+    <div class="center">
+<div class="box">
+    <form class="fbox">
+        <img src="https://images.unsplash.com/photo-1494178270175-e96de2971df9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=780&q=80" alt="">
+        <label for="uname">User Name</label><br>
+        <input type="text" id="uname" style="font-size: 12px;" placeholder="User Name"><br>
+        <label for="pword">Password</label><br>
+        <input type="text" id="pword" style="font-size: 12px;" placeholder="*******"><br>
+        <button type="button" class="slide-btn Sbutton">Log In</button>
+    </form>
+</div>
+</div>
 </body>
 </html>
