--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
         <label for="uname">User Name</label><br>
         <input type="text" id="uname" style="font-size: 12px;" placeholder="User Name"><br>
         <label for="pword">Password</label><br>
-        <input type="text" id="pword" style="font-size: 12px;" placeholder="*******"><br>
-        <button type="button" class="slide-btn Sbutton">Log In</button>
-    </form>
+        <input type="password" id="pword" style="font-size: 12px;" placeholder="*******"><br>
+        <button type="button" class="slide-btn Sbutton" id="submit">Log In</button>
+    </form>    
 </div>
 </div>
+<div id="iModal" class="modalBox">
+    <div class="modalBox-content">
+        <span class="close">&times;</span>
+        <img src="https://images.unsplash.com/photo-1599113615507-13f78150fb2e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" id="modalImg">
+        <p id="modalText"></p>
+      </div>
+</div>
+<script type="text/javascript" src="dist/login.js"></script>
 </body>
 </html>
