--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
 <body>
     <nav class="navbar">   
     <!-- LOGO -->
-    <div class="logo" ><i class="fas fa-tv"></i> Toolbox Text</div>
+    <div class="logo" ><i class="fas fa-tv"></i> Toolbox Test</div>
     
         <ul class="nav-links">
             <div class="menu">
-                <li><a href="#">FIRST EXERCISE</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">SECOND EXERCISE</a></li>
               </div>
         </ul>
     </nav>
